# DeathStarBench

./: README.md
socialNetwork/: CMakeLists.txt  Dockerfile  docker-compose.yml
socialNetwork/cmake/: FindLibevent.cmake
socialNetwork/config/: jaeger-config.yml
socialNetwork/nginx-web-server/: Dockerfile  jaeger-config.json
socialNetwork/nginx-web-server/conf/: nginx.conf
socialNetwork/openshift/: README.md  compose-post-redis.yaml  compose-post-service.yaml  home-timeline-redis.yaml  home-timeline-service.yaml  jaeger.yaml  media-frontend.yaml  media-memcached.yaml  media-mongodb.yaml  media-service.yaml  nginx-thrift.yaml  post-storage-memcached.yaml  post-storage-mongodb.yaml  post-storage-service.yaml  social-graph-mongodb.yaml  social-graph-redis.yaml  social-graph-service.yaml  text-service.yaml  ubuntu-client.yaml  unique-id-service.yaml  url-shorten-memcached.yaml  url-shorten-mongodb.yaml  url-shorten-service.yaml  user-memcached.yaml  user-mention-service.yaml  user-mongodb.yaml  user-service.yaml  user-timeline-mongodb.yaml  user-timeline-redis.yaml  user-timeline-service.yaml  write-home-timeline-rabbitmq.yaml  write-home-timeline-service.yaml
socialNetwork/openshift/config/: jaeger-config.yml
socialNetwork/openshift/media-frontend-config/: nginx.conf
socialNetwork/openshift/nginx-thrift-config/: Dockerfile  jaeger-config.json  nginx.conf
socialNetwork/openshift/scripts/: create-all-micro-services.sh  deploy-all-services-and-configurations.sh  dumplogs.sh  restartall.sh  zap.sh  (+2 more)
socialNetwork/src/: CMakeLists.txt  ClientPool.h  tracing.h
(+145 files in other folders)
